k8s/monerometrics/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monerometrics
  labels:
    app.kubernetes.io/managed-by: monerometrics
    environment: poc
