k8s/monerometrics/40-service-monerod.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: monerod
  namespace: monerometrics
spec:
  selector:
    app: monerod
  ports:
    - name: rpc
      port: 18081
      targetPort: 18081
    - name: rpc-admin
      port: 18083
      targetPort: 18083
    - name: p2p
      port: 18080
      targetPort: 18080
  type: ClusterIP
