k8s/monerometrics/40-service-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: monerometrics
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
