k8s/monerometrics/61-service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: monerometrics
  labels:
    app: api
    app.kubernetes.io/part-of: monerometrics
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
