k8s/monerometrics/62-ingressroute-api.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: monerometrics
  labels:
    app: api
    app.kubernetes.io/part-of: monerometrics
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.monerometrics.net`)
      kind: Rule
      services:
        - name: api
          port: 80
